--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "omnibot",
   "version": "1.0.0",
-  "description": "A discord bot for the RL Duels discord server",
+  "description": "A discord bot for the Alaska discord server",
   "main": "index.js",
-  "repository": "https://github.com/Kamilczak020/Omnibot",
-  "author": "Kamil Solecki <kamilczak020@gmail.com>",
+  "repository": "https://github.com/mattr-/omnibot",
+  "author": "Matt Rogers <codemattr@gmail.com>",
   "license": "MIT",
   "nyc": {
     "include": "src",
